--- a/public_pages/index.html
+++ b/public_pages/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1 class="display-1">CSC1028</h1>
         <p class="lead">
-            Computer Science Challenges - Level 1 Final Submission
+            Computer Science Challenges - Project
         </p>
     </header>
 
